# pyexewrap

./: .gitignore  LICENSE.md  MSIX_COMPATIBILITY.md  README.md  add_to_pythonpath.py  pyproject.toml  run_tests.py
example_scripts/: 01_HelloWorld.py  02_HelloWorld_from_cmd.bat  03_cmd_calls_Enhanced_HelloWorld.bat  04_Enhanced_Import_Error.py  04_Normal_Import_Error.py  04_Unexpected exception.py  05_HelloWorld_nopause.py  06_Enhanced_HelloWorld_nopause_option.py  06_HelloWorld_nopause but exception occurs.py  07_Enhanced_HelloWorld_nopause_option_but_exception_occurs.py  08_Enhanced_syntax_error.py  08_HelloWorld.py with a custom icon.lnk  09_Shortcut_to_Enhanced_HelloWorld.py_with_a_custom_icon.lnk  09_WindowedHelloWorld with exception (default behaviour).pyw  09_WindowedHelloWorld with exception.pyw  10_Normal_WindowedHelloWorld.pyw  10_WindowedHelloWorld with exception.pyw  11_Enhanced_WindowedHelloWorld.pyw  13_Enhanced_WindowedHelloWorld_with_exception.pyw  13_NormalHelloWorld.py with pyexewrap.lnk  14_Shortcut_to_Normal_HelloWorld.py_with_pyexewrap_prefix.lnk  14_WindowedHelloWorld with exception (default behaviour).pyw with pyexewrap.lnk  15_WindowedHelloWorld with exception (default behaviour).pyw with pyexewrap.bat  16_NormalHelloWorld.py with pyexewrap.bat  16_cmd_calls_Normal_WindowedHelloWorld_with_exception.pyw_with_pyexewrap.bat  17_cmd_calls_Normal_HelloWorld.py_with_pyexewrap.bat
examples/: 02_Enhanced_HelloWorld.py  15_Shortcut_to_Normal_WindowedHelloWorld_with_exception.pyw_with_pyexewrap_prefix.lnk  test_msix_doubleclick.py
pyexewrap/: __main__.py
setup/: setup_solution1_uses_batch_.bat  setup_solution2_uses_python.bat  setup_solution2_uses_python.py
(+61 files in other folders)
