[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyexewrap"
version = "0.1.0"
description = "Enhances the user experience of Python scripts run via double-click on Windows"
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "TsKyrk" }]
requires-python = ">=3.8"
keywords = ["windows", "launcher", "wrapper", "double-click", "console"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.urls]
Repository = "https://github.com/TsKyrk/pyexewrap"

[project.scripts]
pyexewrap = "pyexewrap.__main__:main"
